<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context="com.storedata.com.login.LoginActivity">
    <!--Heading tool bar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        android:elevation="3dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <RelativeLayout
                android:id="@+id/back_button"
                android:layout_width="@dimen/app_action_bar_size"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dim_10"
                    android:background="@drawable/back_arrow_icon_selector"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_20"
            android:cursorVisible="true"
            android:hint="@string/username"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textSize="@dimen/dim_15" />

        <EditText
            android:id="@+id/passWordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_20"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite70"
            android:textSize="@dimen/dim_15" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_20"
            android:background="@drawable/button_login_in_active_bag"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dim_15" />

    </LinearLayout>





    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_login_active_bag"
        android:text="@string/signUp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dim_15" />

    <RelativeLayout
        android:id="@+id/native_banner_ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>
