<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context="com.storedata.com.settings.SettingsActivity">
    <!--Heading tool bar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        android:elevation="3dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <RelativeLayout
                android:id="@+id/back_button"
                android:layout_width="@dimen/app_action_bar_size"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dim_10"
                    android:background="@drawable/back_arrow_icon_selector"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/appVersion"
        android:layout_below="@+id/top_section"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_login_active_bag"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim_10"
                android:paddingTop="@dimen/dim_10"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/referYourFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_2"
                android:background="@drawable/button_login_active_bag"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim_10"
                android:paddingTop="@dimen/dim_10"
                android:text="@string/referYourFrd"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reportIssue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_2"
                android:background="@drawable/button_login_active_bag"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim_10"
                android:paddingTop="@dimen/dim_10"
                android:text="@string/reportIssue"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_2"
                android:background="@drawable/button_login_active_bag"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim_10"
                android:paddingTop="@dimen/dim_10"
                android:text="@string/editPass"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />


            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">

                 <FrameLayout
                     android:id="@+id/fl_adplaceholder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp" />

                 <CheckBox
                     android:id="@+id/cb_start_muted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:visibility="gone"
                     android:text="Start video ads muted" />

                 <Button
                     android:id="@+id/btn_refresh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="16dp"
                     android:visibility="visible"
                     android:text="Refresh Ad" />

                 <TextView
                     android:id="@+id/tv_video_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:text="Video status: "
                     android:visibility="gone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


             </LinearLayout>
         -->


            <LinearLayout
                android:id="@+id/native_ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical" />

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_login_active_bag"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dim_10"
        android:paddingTop="@dimen/dim_10"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>
