<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bag"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_2"
        android:layout_marginTop="@dimen/dim_2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/headerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_edit_prifile" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="2"
            android:padding="10dp"
            android:text="@string/editPass"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <!-- <TextView
     android:id="@+id/bodyTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dim_10"
     android:gravity="center"
     android:padding="10dp"
     android:text="Are you sure you want to delete this entry?"
     android:textColor="@color/colorWhite"
     android:textSize="16sp" />-->


    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10"
        android:background="@color/transparent"
        android:paddingBottom="@dimen/dim_2"
        android:paddingTop="@dimen/dim_2"
        android:textColor="@color/blue"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10"
        android:background="@color/transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/dim_2"
        android:paddingTop="@dimen/dim_2"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorfour"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10"
        android:background="@color/transparent"
        android:hint="@string/newPass"
        android:inputType="text"
        android:paddingBottom="@dimen/dim_2"
        android:paddingTop="@dimen/dim_2"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorfour"
        android:textSize="16sp"
        android:textStyle="normal"

        />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10"
        android:background="@color/transparent"
        android:hint="@string/conPass"
        android:inputType="text"
        android:paddingBottom="@dimen/dim_2"
        android:paddingTop="@dimen/dim_2"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorfour"
        android:textSize="16sp"
        android:textStyle="normal"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dim_10"
        android:background="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_2"
        android:layout_marginTop="@dimen/dim_2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="Cancel"
            android:textColor="@color/blue"
            android:textSize="19sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="ok"
            android:textColor="@color/blue"
            android:textSize="19sp" />


    </LinearLayout>
</LinearLayout>
